--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="main" style="width:200px; background-color:purple; border-left: green 5px solid; padding:10px">
-		<heading class="heading" style="font-size:20px; color:white; text-decoration: underline">
+		<heading id="heading" class="heading" style="font-size:20px; color:white; text-decoration: underline">
 			<p>This is a Heading</p>
 		</blockquote>
 	</div>
